tests/baselines/reference/switchAssignmentCompat.errors.txt
tests/cases/compiler/switchAssignmentCompat.ts(4,10): error TS2323: Type 'typeof Foo' is not assignable to type 'number'.


==== tests/cases/compiler/switchAssignmentCompat.ts (1 errors) ====
    class Foo { }
    
    switch (0) {
        case Foo: break; // Error expected
             ~~~
!!! error TS2323: Type 'typeof Foo' is not assignable to type 'number'.
    }
    